Archive2/80/8e9ad71be3280d/main.cpp
#include <iostream>
#include <set>

using namespace std;

class foo {
  public:
    foo() { cout << "foo()" << endl; }
    foo(const foo& other) { cout << "foo(const foo other)" << endl; }
};

void bar(const foo& f) {
    std::set<foo> seq{f};
}

int main() {
    foo f;
    
}   
